<resources>
    <string name="app_name"><font color="#c2faec">Keep</font>Fit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remaining">Remaining: </string>
    <string name="error">Something went wrong</string>
    <string name="add_note">Add note</string>
    <string name="select_date">Select Date</string>
    <string name="empty_weight">you do not have weight information, please enter your current weight</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="weight">Weight</string>
    <string name="normal">Normal</string>
    <string name="underweight">Underweight</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="morbidly_obese">Morbidly Obese</string>
    <string name="_18_5"><![CDATA[< 18.5]]></string>
    <string name="_18_5_25">18.5 – 25</string>
    <string name="_25_30">25 – 30</string>
    <string name="_30_40">30 – 40</string>
    <string name="_40"><![CDATA[> 40]]></string>
    <string name="target_weight">Target Weight</string>
    <string name="weight_unit">Weight Unit</string>
    <string name="height">Height</string>
    <string name="height_unit">Height Unit</string>
    <string name="ideal_weight">Ideal Weight</string>
    <string name="healthy_weight_range">Healthy Weight Range</string>
    <string name="lowest">Lowest</string>
    <string name="average">Average</string>
    <string name="highest">Highest</string>
    <string name="gender">Gender</string>
    <string name="set_target_weight">Set Target Weight</string>
    <string name="finally_sentence">Finally, let\'s enter the height and gender values</string>
    <string name="next">Next</string>
    <string name="set_height">Set Height</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_weight_unit">Select Weight Unit</string>
    <string name="select_height_unit">Select Height Unit</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="introductory_sentence">Let\'s start by entering the current and target weight values</string>
    <string name="current_weight">Current Weight</string>
    <string name="statistics">Statistics</string>
    <string name="number_of_chart_data">Number Of Chart Data</string>
    <string name="measurements">Measurements</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="select_length_unit">Select Length Unit</string>
    <string name="empty_measurement">please enter your measurement information</string>
    <string name="empty_measurement_content">please enter your measurement content information</string>
    <string name="notification_title">Weight Reminder</string>
    <string name="notification_content">Would you like to update your current weight ?</string>
    <string name="general">General</string>
    <string name="data">Data</string>
    <string name="delete_all_weight_data">Delete All Weight Data</string>
    <string name="delete_all_measurements_data">Delete All Measurement Data</string>
    <string name="other">Other</string>
    <string name="share">Share</string>
    <string name="rate_us_on_google_play">Rate Us On Google Play</string>
    <string name="are_you_sure_delete_all_weight_data">Are You Sure Want To Delete All Weight Data ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_delete_all_measurement_data">Are You Sure Want To Delete All Measurement Data ?</string>
    <string name="not_allowed_notification">Allow notifications for daily weight reminders</string>
    <string name="measurement_dialog_title">What you would like to track ? \n (hips, biceps, waist width, etc.)</string>
</resources>