<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="@string/body_mass_index"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/bmi_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textColor="@color/white"
        android:textSize="16sp" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/underweight_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/blue"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/underweight_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/light_blue"
                app:cardCornerRadius="5dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/underweight"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="end"
                android:text="@string/_18_5"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/normal_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/blue"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/normal_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/teal_200"
                app:cardCornerRadius="5dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/normal"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="end"
                android:text="@string/_18_5_25"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/overweight_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/blue"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/overweight_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/light_yellow"
                app:cardCornerRadius="5dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/overweight"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="end"
                android:text="@string/_25_30"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/obese_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/blue"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/obese_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/dark_yellow"
                app:cardCornerRadius="5dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/obese"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="end"
                android:text="@string/_30_40"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/morbidly_obese_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/blue"
        app:cardElevation="0dp">

        <LinearLayout
            android:id="@+id/morbidly_obese_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="5dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/morbidly_obese"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:gravity="end"
                android:text="@string/_40"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
