<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="14sp"
        android:text="@string/select_length_unit"
        android:fontFamily="@font/open_sans_semi_bold"
        android:textColor="@color/white"/>

    <com.nex3z.togglebuttongroup.SingleSelectToggleGroup
        android:id="@+id/group_choices_length_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:visibility="visible"
        app:tbgCheckedButton="@+id/cm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cm"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:tbgMarkerColor="@color/secondary_blue" />

        <com.nex3z.togglebuttongroup.button.CircularToggle
            android:id="@+id/in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="in"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:tbgMarkerColor="@color/secondary_blue" />

    </com.nex3z.togglebuttongroup.SingleSelectToggleGroup>

    <EditText
        android:id="@+id/name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/name"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="14sp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_semi_bold"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>